Aplicación de responsive y diseño

--- a/Views/Clientes/Details.cshtml
+++ b/Views/Clientes/Details.cshtml
@@ -65,7 +65,7 @@
             {
                 <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a>
             }
-            <span>|</span>
+            <span></span>
             <a class="btn btn-danger" asp-action="Index">Cancelar</a>
 </div>
     </div>
