--- a/Views/Empleados/Index.cshtml
+++ b/Views/Empleados/Index.cshtml
@@ -9,8 +9,9 @@
 
 <p>
     <a asp-action="Create" class="btn btn-secondary">Crear nuevo empleado</a>
+    <div class="table-responsive">
 </p>
-<table class="table table-bordered table-sm">
+<table class="table table-bordered table">
     <thead>
   <tr class="table-dark">
             <th>
@@ -74,5 +75,6 @@
 }
     </tbody>
 </table>
+</div>
 </div>
 </div>
