--- a/Views/Home/CatalogoMenu.cshtml
+++ b/Views/Home/CatalogoMenu.cshtml
@@ -40,7 +40,7 @@
 </div>
 
 <div>
-    <a asp-action="CatalogoRestaurante" class="btn btn-secondary">Regresar</a>
+    <a asp-action="CatalogoRestaurante" class="btn btn-dark">Regresar</a>
 
 </div>
 
