--- a/Views/Home/VerMas.cshtml
+++ b/Views/Home/VerMas.cshtml
@@ -55,7 +55,7 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id"></a>
-    <a asp-action="CatalogoMenu" class="btn btn-outline-secondary">Regresar</a>
+    <a asp-action="CatalogoMenu" class="btn btn-secondary">Regresar</a>
             
 </div>
     </div>
