--- a/Views/Home/VerMasR.cshtml
+++ b/Views/Home/VerMasR.cshtml
@@ -38,9 +38,9 @@
 </div>
 <div>
             <a asp-action="Edit" asp-route-id="@Model?.IdRestaurante"></a>
-    <a asp-action="CatalogoRestaurante" class="btn btn-outline-secondary">Regresar</a>
-    <a asp-action="CatalogoMenu" class="btn btn-outline-secondary">Ver menu</a>
-            <a asp-controller="Reservas" asp-action="Create" class="btn btn-outline-secondary">realizar reserva</a>
+    <a asp-action="CatalogoRestaurante" class="btn btn-secondary">Regresar</a>
+    <a asp-action="CatalogoMenu" class="btn btn-secondary">Ver menu</a>
+            <a asp-controller="Reservas" asp-action="Create" class="btn btn-secondary">Realizar reserva</a>
 </div>
     </div>
 </div>
