--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -49,7 +49,7 @@
                     </div>
             <div class="form-group">
 
-                <input type="submit" value="Guardar" class="btn btn-secondary" /> |
+                <input type="submit" value="Guardar" class="btn btn-secondary" />
                 <a class="btn btn-danger" asp-action="Index">Cancelar</a>
             </div>
         </form>
