--- a/Views/Empleados/Delete.cshtml
+++ b/Views/Empleados/Delete.cshtml
@@ -66,8 +66,8 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
        
-                    <button type="submit" class="btn btn-outline-danger me-3">Eliminar</button>|
-        <a asp-action="Index" class="btn btn-outline-secondary">Cancelar</a>
+                    <button type="submit" class="btn btn-danger">Eliminar</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
     </div>
