--- a/Views/Empleados/Edit.cshtml
+++ b/Views/Empleados/Edit.cshtml
@@ -50,9 +50,9 @@
                 </div>
             <div class="form-group">
           
-                            <input type="submit" value="Guardar" class="btn btn-outline-info" />
+                            <input type="submit" value="Guardar" class="btn btn-secondary" />
                         
-                        <a asp-action="Index" class="btn btn-outline-dark">cancelar</a>
+                        <a asp-action="Index" class="btn btn-dark">cancelar</a>
             </div>
         </form>
     </div>
