--- a/Views/Restaurantes/Create.cshtml
+++ b/Views/Restaurantes/Create.cshtml
@@ -46,8 +46,8 @@
                         </div>
                     </div>
             <div class="form-group">
-            <input type="submit" value="Crear" class="btn btn-dark" /> |
-            <a asp-action="Index" class="btn btn-danger">cancelar</a>
+            <input type="submit" value="Crear" class="btn btn-dark" />
+            <a asp-action="Index" class="btn btn-danger">Cancelar</a>
             </div>
         </form>
     </div>
