--- a/Views/Restaurantes/Edit.cshtml
+++ b/Views/Restaurantes/Edit.cshtml
@@ -8,8 +8,6 @@
     <div class="card-body">
         <h1 class="card-title">Editar</h1>
 
-<h4>Restaurante</h4>
-<hr />
 <div class="row">
     <div class="col-md-12">
         <form asp-action="Edit" enctype="multipart/form-data" class="row g-3">
@@ -60,7 +58,7 @@
                         </div>
                     </div>
             <div class="form-group">
-              <input type="submit" value="Editar" class="btn btn-secondary" /> |
+              <input type="submit" value="Editar" class="btn btn-secondary" />
                 <a asp-action="Index" class="btn btn-dark">cancelar</a>
 
             </div>
