--- a/Views/Restaurantes/Index.cshtml
+++ b/Views/Restaurantes/Index.cshtml
@@ -15,7 +15,7 @@
 <p>
     
     <a asp-action="Create" class="btn btn-secondary">Agregar nuevo restaurante</a>
-                            
+    <div class="table-responsive">                      
 </p>
      
 <table class="table table-bordered table-sm">
@@ -79,3 +79,4 @@
 </table>
 </div>
 </div>
+</div>  
