--- a/Views/Empleados/Details.cshtml
+++ b/Views/Empleados/Details.cshtml
@@ -66,8 +66,8 @@
 </div>
 <div>
 
-                <a asp-action="Edit" class="btn btn-success" asp-route-id="@Model?.Id">Editar</a>
-            <span>|</span>
+                <a asp-action="Edit" class="btn btn-secondary" asp-route-id="@Model?.Id">Editar</a>
+            
             <a asp-action="Index" class="btn btn-dark">Cancelar</a>
 </div>
     </div>
