se arreglaron varios problmas y ademas ahora ya puede inciar sesion

--- a/presentacion/Views/Empleados/Index.cshtml
+++ b/presentacion/Views/Empleados/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<T_Reservation.Models.Empleado>
+﻿@model IEnumerable<T_RESERVATION.EntidadesNegocio.Empleado>
 
 @{
     ViewData["Title"] = "Index";
