controlador de empleados terminado

--- a/presentacion/Views/Clientes/Index.cshtml
+++ b/presentacion/Views/Clientes/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<T_Reservation.Models.Cliente>
-
+﻿@model IEnumerable<T_RESERVATION.EntidadesNegocio.Cliente>
 @{
     ViewData["Title"] = "Cliente";
 }
