Menu funciona pero no muestra las categorias

--- a/presentacion/Views/Menus/Index.cshtml
+++ b/presentacion/Views/Menus/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<T_Reservation.Models.Menu>
+﻿@model IEnumerable<T_RESERVATION.EntidadesNegocio.Menu>
 
 @{
     ViewData["Title"] = "Productos";
