ahora el mestro de detalle si muestra pero hay que arreglar el combobox de empelado

--- a/presentacion/Views/Home/CatalogoRestaurante.cshtml
+++ b/presentacion/Views/Home/CatalogoRestaurante.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<T_Reservation.Models.Restaurante>
+﻿@model IEnumerable<T_RESERVATION.EntidadesNegocio.Restaurante>
 
 @{
     ViewData["Title"] = "Restaurante";
