--- a/presentacion/Views/Reservas/Index.cshtml
+++ b/presentacion/Views/Reservas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<T_Reservation.Models.Reserva>
+﻿@model IEnumerable<T_RESERVATION.EntidadesNegocio.Reserva>
 
 @{
     ViewData["Title"] = "Index";
