--- a/presentacion/Views/Restaurantes/Delete.cshtml
+++ b/presentacion/Views/Restaurantes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model T_Reservation.Models.Restaurante
+﻿@model T_RESERVATION.EntidadesNegocio.Restaurante
 
 @{
     ViewData["Title"] = "Delete";
