--- a/presentacion/Views/Restaurantes/Create.cshtml
+++ b/presentacion/Views/Restaurantes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model T_RESERVATION.EntidadesNegocio.Restaurante
 
 @{
-    ViewData["Title"] = "Create";
+    @* ViewData["Title"] = "Create"; *@
 }
 
 <div class="card">
@@ -10,7 +10,7 @@
 <hr />
 <div class="container">
   <div class="col-md-12">
-        <form asp-action="Create" enctype="multipart/form-data" class="row g-3">
+        <form asp-action="CreateAsync" enctype="multipart/form-data" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group col-md-6">
