--- a/presentacion/Views/Restaurantes/Create.cshtml
+++ b/presentacion/Views/Restaurantes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model T_RESERVATION.EntidadesNegocio.Restaurante
 
 @{
-    @* ViewData["Title"] = "Create";  *@
+     ViewData["Title"] = "Create";  
 }
 
 <div class="card">
@@ -10,7 +10,7 @@
 <hr />
 <div class="container">
   <div class="col-md-12">
-        <form asp-action="CreateAsync" enctype="multipart/form-data" class="row g-3">
+                <form asp-action="Create" id="frmFacturaVenta" enctype="multipart/form-data" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group col-md-6">
@@ -41,13 +41,16 @@
                 <select asp-for="EmpleadoId" class ="form-control" asp-items="ViewBag.EmpleadoId"></select>
             </div>
                     <div class="row">
-                        <div class="row row-cols-md-12">
+                        <div class="row row-cols-md-12" id="divDetalleFacturaVenta">
                             @await Html.PartialAsync("_Mesas", Model.Mesas)
                         </div>
                     </div>
             <div class="form-group">
             <input type="submit" value="Crear" class="btn btn-dark" />
             <a asp-action="Index" class="btn btn-danger">Cancelar</a>
+            </div>
+            <div>
+                        <input type="hidden" name="index" id="txtIndexDetalle" />
             </div>
         </form>
     </div>
@@ -56,6 +59,9 @@
 
 
 @section Scripts {
+            @{
+                await Html.RenderPartialAsync("_MesasScript");
+            }
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script>
         function mostrarVistaPrevia() {
