--- a/presentacion/Views/Reservas/Index.cshtml
+++ b/presentacion/Views/Reservas/Index.cshtml
@@ -10,10 +10,9 @@
         <h1 class="card-title">Reservaciones</h1>
 
         <p>
-            @if (User.IsInRole("Cliente"))
-            {
+            
                 <a asp-action="Create" class="btn btn-secondary">Nueva Reserva</a>
-            }
+            
             
             
         </p>
@@ -69,14 +68,14 @@
                                 {
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Editar</a>
                                 }
-                                @if (User.IsInRole("Cliente,Administrador,Empleado"))
-                                {
+                              @*  @if (User.IsInRole("Cliente,Administrador,Empleado"))*@
+                                
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
-                                    }
-                                @if (User.IsInRole("Cliente"))
-                                {
+                                    
+                                @*@if (User.IsInRole("Cliente"))*@
+                                
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
-                                        }
+                                        
             </td>
         </tr>
 }
